# route_env

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline_benchmark.py  baseline_scores.json  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py  validator.bash
route_env/: .gitignore  README.md  __init__.py  client.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
route_env/server/: Dockerfile  __init__.py  app.py  route_env_environment.py
server/: app.py  route_env_environment.py
