# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-route_env"
version = "0.1.0"
description = "Route Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Now that repo root IS the package, server is at server/app.py directly
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server"]
# This tells Python to treat these root-level files as part of the project
py-modules = ["models", "tasks", "grader", "client"]